k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: godemode
  labels:
    name: godemode
    app: godemode
    environment: production
